[xf] fix z-index for version component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -224,18 +224,18 @@ body {
 
 .statusBlock {
 	width: 200px;
-  height: 50px;
-  position: fixed;
-  top: 0;
-  right: 20px;
-  margin-top: 7px;
-  border-radius: 5px;
-  font-size: 20px;
-  line-height: 20px;
-  font-weight: bolder;
-  color: rgba(0, 0, 0, 0.4);
-  padding: 15px 0;
-  text-align: center;
+	height: 50px;
+	position: fixed;
+	top: 0;
+	right: 20px;
+	margin-top: 7px;
+	border-radius: 5px;
+	font-size: 20px;
+	line-height: 50px;
+	font-weight: bolder;
+	color: rgba(0, 0, 0, 0.4);
+	text-align: center;
+	z-index: 9999;
 }
 
 .step {
